--- a/components/component2/Kconfig
+++ b/components/component2/Kconfig
@@ -1,6 +1,7 @@
 menu "Component2 configuration"
     config COMPONENT2_ENABLED
         bool "Enable component2"
+        default n
         help
             Select this option to enable component2 and show the submenu.
     menu "Component2 configuration menu2"
