--- a/components/libmaix/CMakeLists.txt
+++ b/components/libmaix/CMakeLists.txt
@@ -35,6 +35,8 @@ if(CONFIG_LIBMAIX_ENABLED)
                                 "lib/arch/v831/libmpp_vi.so"
                                 "lib/arch/v831/libmpp_mini.so"
                                 "lib/arch/v831/libmaix_cam.so"
+                                "lib/arch/v831/libmaix_disp.so"
+                                "lib/arch/v831/libmaix_image.so"
     )
     ###############################################
 
