--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -24,11 +24,26 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-    - name: Test build
-      run: |
         wget https://github.com/sipeed/libmaix/releases/download/v0.1.0/toolchain-sunxi-musl-pack-2021-01-09.tar.xz
         tar -Jxvf toolchain-sunxi-musl-pack-2021-01-09.tar.xz -C /opt
+    - name: Test hello-world build
+      run: |
         cd examples/hello-world
         python project.py build
         python project.py clean
         python project.py distclean
+        cd ../..
+    - name: Test camera build
+      run: |
+        cd examples/camera
+        python project.py build
+        python project.py clean
+        python project.py distclean
+        cd ../..
+    - name: Test nn_resnet build
+      run: |
+        cd examples/nn_resnet
+        python project.py build
+        python project.py clean
+        python project.py distclean
+        cd ../..
