--- a/components/libmaix/CMakeLists.txt
+++ b/components/libmaix/CMakeLists.txt
@@ -21,24 +21,45 @@ if(CONFIG_LIBMAIX_ENABLED)
     ###############################################
 
     ############ Add dynamic libs ##################
-    list(APPEND ADD_DYNAMIC_LIB "lib/arch/v831/libmaix_nn.so"
-                                "lib/arch/v831/libISP.so"
-                                "lib/arch/v831/libcdc_base.so"
-                                "lib/arch/v831/libion.so"
-                                "lib/arch/v831/libglog.so"
-                                "lib/arch/v831/liblog.so"
-                                "lib/arch/v831/libVE.so"
-                                "lib/arch/v831/libisp_ini.so"
-                                "lib/arch/v831/libmedia_utils.so"
-                                "lib/arch/v831/libMemAdapter.so"
-                                "lib/arch/v831/libmpp_isp.so"
-                                "lib/arch/v831/libmpp_vi.so"
-                                "lib/arch/v831/libmpp_mini.so"
-                                "lib/arch/v831/libmaix_cam.so"
-                                "lib/arch/v831/libmaix_disp.so"
-                                "lib/arch/v831/libmaix_image.so"
-                                "lib/arch/v831/libmaix_utils.so"
-    )
+    if(CONFIG_ARCH_V831)
+        list(APPEND ADD_DYNAMIC_LIB "lib/arch/v831/libmaix_nn.so"
+                                    "lib/arch/v831/libISP.so"
+                                    "lib/arch/v831/libcdc_base.so"
+                                    "lib/arch/v831/libion.so"
+                                    "lib/arch/v831/libglog.so"
+                                    "lib/arch/v831/liblog.so"
+                                    "lib/arch/v831/libVE.so"
+                                    "lib/arch/v831/libisp_ini.so"
+                                    "lib/arch/v831/libmedia_utils.so"
+                                    "lib/arch/v831/libMemAdapter.so"
+                                    "lib/arch/v831/libmpp_isp.so"
+                                    "lib/arch/v831/libmpp_vi.so"
+                                    "lib/arch/v831/libmpp_mini.so"
+                                    "lib/arch/v831/libmaix_cam.so"
+                                    "lib/arch/v831/libmaix_disp.so"
+                                    "lib/arch/v831/libmaix_image.so"
+                                    "lib/arch/v831/libmaix_utils.so"
+        )
+    else()
+        list(APPEND ADD_DYNAMIC_LIB "lib/arch/v833/libmaix_nn.so"
+            "lib/arch/v833/libISP.so"
+            "lib/arch/v833/libcdc_base.so"
+            "lib/arch/v833/libion.so"
+            "lib/arch/v833/libglog.so"
+            "lib/arch/v833/liblog.so"
+            "lib/arch/v833/libVE.so"
+            "lib/arch/v833/libisp_ini.so"
+            "lib/arch/v833/libmedia_utils.so"
+            "lib/arch/v833/libMemAdapter.so"
+            "lib/arch/v833/libmpp_isp.so"
+            "lib/arch/v833/libmpp_vi.so"
+            "lib/arch/v833/libmpp_mini.so"
+            "lib/arch/v833/libmaix_cam.so"
+            "lib/arch/v833/libmaix_disp.so"
+            "lib/arch/v833/libmaix_image.so"
+            "lib/arch/v833/libmaix_utils.so"
+        )
+    endif()
     ###############################################
 
     #### Add compile option for this component ####
