[update] add v833 lib.

--- a/components/libmaix/CMakeLists.txt
+++ b/components/libmaix/CMakeLists.txt
@@ -34,7 +34,6 @@ if(CONFIG_LIBMAIX_ENABLED)
                                     "lib/arch/v831/libMemAdapter.so"
                                     "lib/arch/v831/libmpp_isp.so"
                                     "lib/arch/v831/libmpp_vi.so"
-                                    "lib/arch/v831/libmpp_mini.so"
                                     "lib/arch/v831/libmaix_cam.so"
                                     "lib/arch/v831/libmaix_disp.so"
                                     "lib/arch/v831/libmaix_image.so"
@@ -42,6 +41,7 @@ if(CONFIG_LIBMAIX_ENABLED)
         )
     else()
         list(APPEND ADD_DYNAMIC_LIB "lib/arch/v833/libmaix_nn.so"
+            "lib/arch/v833/libz.so"
             "lib/arch/v833/libISP.so"
             "lib/arch/v833/libcdc_base.so"
             "lib/arch/v833/libion.so"
@@ -53,11 +53,29 @@ if(CONFIG_LIBMAIX_ENABLED)
             "lib/arch/v833/libMemAdapter.so"
             "lib/arch/v833/libmpp_isp.so"
             "lib/arch/v833/libmpp_vi.so"
-            "lib/arch/v833/libmpp_mini.so"
             "lib/arch/v833/libmaix_cam.so"
             "lib/arch/v833/libmaix_disp.so"
             "lib/arch/v833/libmaix_image.so"
             "lib/arch/v833/libmaix_utils.so"
+            "lib/arch/v833/libcdx_base.so"
+            "lib/arch/v833/libvideoengine.so"
+            "lib/arch/v833/libcdx_stream.so"
+            "lib/arch/v833/libcdx_parser.so"
+            "lib/arch/v833/libvdecoder.so"
+            "lib/arch/v833/libvenc_codec.so"
+            "lib/arch/v833/libvenc_base.so"
+            "lib/arch/v833/libmpp_vo.so"
+            "lib/arch/v833/libmedia_mpp.so"
+            "lib/arch/v833/libcedarxrender.so"
+            "lib/arch/v833/libcedarxstream.so"
+            "lib/arch/v833/libcdx_common.so"
+            "lib/arch/v833/libadecoder.so"
+            "lib/arch/v833/libhwdisplay.so"
+            "lib/arch/v833/libcutils.so"
+            "lib/arch/v833/libcedarx_aencoder.so"
+            "lib/arch/v833/libasound.so"
+            "lib/arch/v833/libmpp_component.so"
+            "lib/arch/v833/libvencoder.so"
         )
     endif()
     ###############################################
