--- a/components/libmaix/CMakeLists.txt
+++ b/components/libmaix/CMakeLists.txt
@@ -23,21 +23,41 @@ if(CONFIG_LIBMAIX_ENABLED)
     ############ Add dynamic libs ##################
     if(CONFIG_ARCH_V831)
         list(APPEND ADD_DYNAMIC_LIB "lib/arch/v831/libmaix_nn.so"
-                                    "lib/arch/v831/libISP.so"
-                                    "lib/arch/v831/libcdc_base.so"
-                                    "lib/arch/v831/libion.so"
-                                    "lib/arch/v831/libglog.so"
-                                    "lib/arch/v831/liblog.so"
-                                    "lib/arch/v831/libVE.so"
-                                    "lib/arch/v831/libisp_ini.so"
-                                    "lib/arch/v831/libmedia_utils.so"
-                                    "lib/arch/v831/libMemAdapter.so"
-                                    "lib/arch/v831/libmpp_isp.so"
-                                    "lib/arch/v831/libmpp_vi.so"
-                                    "lib/arch/v831/libmaix_cam.so"
-                                    "lib/arch/v831/libmaix_disp.so"
-                                    "lib/arch/v831/libmaix_image.so"
-                                    "lib/arch/v831/libmaix_utils.so"
+            "lib/arch/v831/libz.so"
+            "lib/arch/v831/libISP.so"
+            "lib/arch/v831/libcdc_base.so"
+            "lib/arch/v831/libion.so"
+            "lib/arch/v831/libglog.so"
+            "lib/arch/v831/liblog.so"
+            "lib/arch/v831/libVE.so"
+            "lib/arch/v831/libisp_ini.so"
+            "lib/arch/v831/libmedia_utils.so"
+            "lib/arch/v831/libMemAdapter.so"
+            "lib/arch/v831/libmpp_isp.so"
+            "lib/arch/v831/libmpp_vi.so"
+            "lib/arch/v831/libmaix_cam.so"
+            "lib/arch/v831/libmaix_disp.so"
+            "lib/arch/v831/libmaix_image.so"
+            "lib/arch/v831/libmaix_utils.so"
+            "lib/arch/v831/libcdx_base.so"
+            "lib/arch/v831/libvideoengine.so"
+            "lib/arch/v831/libcdx_stream.so"
+            "lib/arch/v831/libcdx_parser.so"
+            "lib/arch/v831/libvdecoder.so"
+            "lib/arch/v831/libvenc_codec.so"
+            "lib/arch/v831/libvenc_base.so"
+            "lib/arch/v831/libmpp_vo.so"
+            "lib/arch/v831/libmedia_mpp.so"
+            "lib/arch/v831/libcedarxrender.so"
+            "lib/arch/v831/libcedarxstream.so"
+            "lib/arch/v831/libcdx_common.so"
+            "lib/arch/v831/libadecoder.so"
+            "lib/arch/v831/libhwdisplay.so"
+            "lib/arch/v831/libcutils.so"
+            "lib/arch/v831/libcedarx_aencoder.so"
+            "lib/arch/v831/libasound.so"
+            "lib/arch/v831/libmpp_component.so"
+            "lib/arch/v831/libvencoder.so"
         )
     else()
         list(APPEND ADD_DYNAMIC_LIB "lib/arch/v833/libmaix_nn.so"
