--- a/components/libmaix/CMakeLists.txt
+++ b/components/libmaix/CMakeLists.txt
@@ -102,6 +102,8 @@ if(CONFIG_LIBMAIX_ENABLED)
       set(CMAKE_C_LINK_FLAGS "${CMAKE_C_LINK_FLAGS} -Wl,--start-group libmaix/liblibmaix.a -lmaix_nn -Wl,--end-group" PARENT_SCOPE)
     elseif(CONFIG_ARCH_R329)
       list(APPEND ADD_DYNAMIC_LIB
+          "lib/arch/r329/libmaix_utils.so"
+          "lib/arch/r329/libmaix_image.so"
           "lib/arch/r329/libmaix_disp.so"
           "lib/arch/r329/libmaix_cam.so"
       )
