[r329] update  capture_image & draw_image

--- a/components/libmaix/lib/arch/r329/src/libmaix_image/CMakeLists.txt
+++ b/components/libmaix/lib/arch/r329/src/libmaix_image/CMakeLists.txt
@@ -8,8 +8,7 @@ link_directories("../../../r329/opencv4")
 link_directories("../../../r329/")
 
 add_library(maix_image SHARED # STATIC
-        src/opencv_image.cpp
-        src/libmaix_image.c
+        src/libmaix_image.cpp
 )
 
 set(export_dir ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../../libmaix)
