--- a/examples/hello-world/main/CMakeLists.txt
+++ b/examples/hello-world/main/CMakeLists.txt
@@ -13,7 +13,7 @@ append_srcs_dir(ADD_SRCS "src")
 ###############################################
 
 ###### Add required/dependent components ######
-list(APPEND ADD_REQUIREMENTS maix_cv_image libmaix)
+# list(APPEND ADD_REQUIREMENTS maix_cv_image libmaix)
 ###############################################
 
 ############ Add static libs ##################
