--- a/components/libmaix/lib/arch/r329/src/CMakeLists.txt
+++ b/components/libmaix/lib/arch/r329/src/CMakeLists.txt
@@ -21,3 +21,4 @@ add_subdirectory(${lib_src_DIR}/libmaix_utils ${lib_build_DIR}/libmaix_utils)
 add_subdirectory(${lib_src_DIR}/libmaix_image ${lib_build_DIR}/libmaix_image)
 add_subdirectory(${lib_src_DIR}/libmaix_disp ${lib_build_DIR}/libmaix_disp)
 add_subdirectory(${lib_src_DIR}/libmaix_cam ${lib_build_DIR}/libmaix_cam)
+add_subdirectory(${lib_src_DIR}/libmaix_nn ${lib_build_DIR}/libmaix_nn)
