--- a/examples/nn_resnet/main/CMakeLists.txt
+++ b/examples/nn_resnet/main/CMakeLists.txt
@@ -33,6 +33,7 @@ list(APPEND ADD_REQUIREMENTS maix_cv_image libmaix)
 ###############################################
 
 
+set(CMAKE_C_LINK_FLAGS "${CMAKE_C_LINK_FLAGS} -lm -g" PARENT_SCOPE) 
 
 register_component()
 
