[update] Added libmaix_NN API of C language level, complete nn_resnet example

--- a/components/libmaix/lib/arch/r329/src/libmaix_nn/CMakeLists.txt
+++ b/components/libmaix/lib/arch/r329/src/libmaix_nn/CMakeLists.txt
@@ -26,6 +26,10 @@ set(export_dir ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../../libmaix)
 target_link_libraries(
     maix_nn
     libaipudrv.so
+    libm.so
+    libpthread.so
+    libstdc++.so.6
+    libstdc++.so.6.0.22
     libmaix_utils.so
 )
 
