--- a/components/libmaix/lib/arch/r329/src/libmaix_utils/CMakeLists.txt
+++ b/components/libmaix/lib/arch/r329/src/libmaix_utils/CMakeLists.txt
@@ -21,6 +21,8 @@ set_target_properties(
         maix_utils
         PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${export_dir}/lib/arch/r329")
 
+set_target_properties(maix_utils PROPERTIES LINK_FLAGS "-Wl,-rpath,/usr/local/lib/python3.9/dist-packages/maix/")
+
 add_custom_command(
         # POST_BUILD 处 有三个值可选
         # 分别是:
