--- a/components/maix_cv_image/CMakeLists.txt
+++ b/components/maix_cv_image/CMakeLists.txt
@@ -12,7 +12,26 @@ if(CONFIG_COMPONENT_IMAGE_ENABLE)
     include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../libmaix/include)
 
     ############ Add dynamic libs ##################
-    if(CONFIG_ARCH_V831)
+    if(CONFIG_ARCH_Desktop)
+        include_directories(/usr/include/opencv4)
+        include_directories(/usr/local/include/opencv4)
+        # list(APPEND ADD_DYNAMIC_LIB
+        #     "libjpeg.so"
+        #     "libpng12.so"
+        #     "libwebp.so"
+        #     "libfreetype.so"
+        #     "libharfbuzz.so"
+        #     "libglib-2.0.so"
+        #     "libpcre.so"
+        #     "libbz2.so"
+        #     "libopencv_videoio.so"
+        #     "libopencv_highgui.so"
+        #     "libopencv_imgcodecs.so"
+        #     "libopencv_imgproc.so"
+        #     "libopencv_core.so"
+        #     "libopencv_freetype.so"
+        # )
+    elseif(CONFIG_ARCH_V831)
         include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../libmaix/lib/arch/v83x/include/opencv4)
         list(APPEND ADD_DYNAMIC_LIB
             "../libmaix/lib/arch/v831/libmaix_nn.so"
