[uodate] Libmaix libmaix_nn_app  API

--- a/components/libmaix/CMakeLists.txt
+++ b/components/libmaix/CMakeLists.txt
@@ -123,6 +123,8 @@ if(CONFIG_LIBMAIX_ENABLED)
           "lib/arch/r329/libmaix_cam.so"
           "lib/arch/r329/libmaix_nn.so"
           "lib/arch/r329/libmaix_nn_decoder.so"
+          "lib/arch/r329/libmaix_nn_app.so"
+
       )
       set(CMAKE_C_LINK_FLAGS "${CMAKE_C_LINK_FLAGS} -fuse-ld=gold -Wl,--start-group libmaix/liblibmaix.a -Wl,--end-group" PARENT_SCOPE)
 
